- shift around some paths
- update database with New Super Mario Bros. Wii mods
- code review and improvements
- improved Debian GNU/Linux packaging
- install pre-compiled tools to /usr/lib/ARCH/patchimage (FHS compliance)
- improved --help message
- add --list-games parameter (show buildable games)
- --list-games and menu now show ID / Short Name and Full Name of all games

::bug fixes
- several minor bugfixes and improvements
- before creating any of the directories defined in ${HOME}/.patchimage.rc
  check whether the parent directory is writeable, else fallback to ${HOME}
- when setting destination directory for created files, check if they are
  writeable, else fallback to ${HOME}
- fix telling user path to Hans Files for all Pokemon game hacks
- make the script more robust against directories with spaces in their names
- use gdown.pl for drive.google.* download links
- for download links on Mega tell user where to download manually
- for download links on Mediafire tell user where to download manually
- patchimage menu showed TMS1 as ID for Tokyo Mirage Sessions #FE restoration
  patcher, while TMSFE was the actual (but wrong ID), thus TMS1 was reported
  as unknown game / wrong user input. Now TMS1 works as expected.

::configuration file changes
- new configuration variable PATCHIMAGE_3DS_DIR, global directory
  where to look for unmodified 3DS ROM files
- new configuration variable PATCHIMAGE_ROM_DIR, global directory
  where to store your modified 3DS ROM files

::documentation
- update REAMDE
- update README.RC
- update README.STATUS_CODES
- update README.GAMEIDS
  - now includes game search paths
  - now includes expected filenames

::misc. changes
- make check_input_rom search in both ${PATCHIMAGE_3DS_DIR} and ${PWD}
- show full path for Hans Files for all games, instead of relative
- only show path to Hans files if they exist
- when downloading covers for Wii games fail, retry with the US cover
- don't re-download covers that already exist