@@ -13,6 +13,9 @@ v7.0.0:
 - improved --help message
 - add --list-games parameter (show buildable games)
 - --list-games and menu now show ID / Short Name and Full Name of all games
+- add --override-szs to override Wiims Mario Kart Fun wit and szs with
+  the ones supplied by patchimage. Use this if building Wiims Mario Kart Fun
+  fails due to incompatible library versions being installed.
 
 ::bug fixes
 - several minor bugfixes and improvements
